# Building_and_Evaluating_AI_Agents_for_Automated_Task_Execution

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: config.py
app/agents/: communication_agent.py  multimodal_ai_agent.py  order_processing_agent.py  platform_integration_agent.py
app/communication/gmail/: simulator.py
app/communication/whatsapp/: downloader.py  parser.py  sender.py  simulator.py  twilio_client.py  webhook.py
app/graph/: state.py  workflow.py  workflowStatus.py
app/logs/: logger.py
app/models/: extracted_order.py  order.py  order_message.py
app/prompts/: vision_prompt.txt
app/services/: communication_service.py  human_validation_service.py  order_service.py  platform_service.py  vision_service.py
app/services/ollama/: client.py
app/validators/: order_validator.py
tests/: test_gmail.py  test_ollama_config.py  test_phase1_smoke.py  test_vision.py  test_whatsapp.py  test_workflow.py
tests/agents/: test_multimodal_agent.py  test_order_processing_agent.py  test_platform_integration_agent.py
tests/services/: test_human_validation_service.py  test_order_service.py  test_platform_service.py  test_vision_service.py
