[project]
name = "building-and-evaluating-ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.1",
    "google-genai>=2.12.1",
    "httpx>=0.28.1",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.7",
    "pillow>=12.3.0",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
